<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- fragmetn title -->
    <string name="app_name">Cloud Note</string>
    <string name="close">Выход</string>
    <string name="title_favorit">Избранные</string>
    <string name="title_auth">Авторизация</string>
    <string name="title_drawer">Меню</string>
    <string name="title_settings">Настройки</string>
    <string name="title_password">Проверка пароля</string>
    <string name="title_password_save">Сохранение пароля</string>

    <!-- fragment  view List -->
    <string name="title_view_list">Списки</string>
    <string name="title_view_list_add">Создание списка</string>
    <string name="title_view_list_edit">Редактирование списка</string>

    <!-- fragment  view task -->
    <string name="title_view_task">Заметки</string>
    <string name="title_view_task_add">Создание заметки</string>
    <string name="title_view_task_edit">Редактирование заметки</string>

    <!-- fragment task recovery -->
    <string name="title_basket">Корзина</string>
    <string name="title_recovery_task">Ввостановление заметки</string>
    <string name="title_recovery_list">Ввостановление списка</string>

    <!-- не проверенно -->




    <!-- fragment note title -->
    <string name="title_note">Блокнот</string>
    <string name="title_notes">Блокноты</string>
    <string name="title_note_edit">Редактирование блокнота</string>
    <string name="title_note_add">Создание блокнота</string>
    <string name="button_note_add">Добавить блокнот</string>

    <!-- fragment note mod -->
    <string name="note_mod_title">Название блокнота</string>
    <string name="note_mod_title_hint">Введите название блокнота</string>
    <string name="note_mod_gallery">Обложка блокнота</string>
    <string name="note_mod_finish">Готово</string>

    <!-- fragment task mod -->
    <string name="task_mod_title">Название заметки</string>
    <string name="task_mod_title_hint">Введите название заметки</string>
    <string name="task_mod_text_title">Содержание заметки</string>
    <string name="task_mod_text">Введите текст</string>
    <string name="task_mod_finish">Готово</string>

    <!-- fragment note -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dropbox_auth">Авторизация в Dropbox </string>
    <string name="dropbox_auth_text_1">Добро пожаловать</string>
    <string name="dropbox_auth_text_2">Для использования "Could Note", пройдите авторизациию в Drobpox</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="pref_user">Настройки пользователя</string>
    <string name="pref_prorgams">Настройки программы</string>
    <string name="close_user">Отключиться от аккаунта</string>
    <string name="activity_location_found">Location Found</string>

    <!-- Action Bar action items -->
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    <string name="search_hint">Search color..</string>

</resources>