<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.9" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9"
                        android:text="@string/title_note" />

                    <Spinner
                        android:id="@+id/spinner_note"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.9"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/image_favorite"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/selector"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_favorit_off" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_mod_title"
                    android:textColor="@color/whiteGrey" />

                <EditText
                    android:id="@+id/task_mod_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/task_mod_title_hint"
                    android:textColor="@color/Grin" />

                
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_mod_text_title"
                    android:textColor="@color/whiteGrey" />

                <EditText
                    android:id="@+id/task_mod_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/task_mod_text"
                    android:textColor="@color/Grin" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.9" >

            <ImageButton
                android:id="@+id/button_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:adjustViewBounds="false"
                android:background="@drawable/selector"
                android:baselineAlignBottom="false"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                android:src="@drawable/cold_line_hor"
                android:text="Пароль" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="Восстановить"
                android:textColor="@color/whiteGrey"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>