<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.9" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_mod_title"
                    android:textColor="@color/whiteGrey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/note_add_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/note_mod_title_hint"
                    android:textColor="@color/Grin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/note_mod_gallery"
                    android:textColor="@color/whiteGrey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Gallery
                    android:id="@+id/gallery"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:spacing="60dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Пароль"
                    android:textColor="@color/whiteGrey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

  <LinearLayout
        android:id="@+id/layout_finish"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cold_line_hor" >
        </LinearLayout>

        <TextView
            android:id="@+id/finish_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.90"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/task_mod_finish"
            android:textColor="@color/whiteGrey"
            android:textSize="20sp" />
    </LinearLayout>

    

</LinearLayout>